# ljud2.0

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  i2c.cpp  i2c.h  idf_component.yml  main.cpp  uint3.h
main/ble/: ble.cpp  ble.h
main/devices/: amplifier.cpp  amplifier.h  codec.cpp  codec_regs.h  device_component.cpp  device_component.h  regs.h  satellites.cpp  sub.cpp
