idf_component_register(SRCS "main.cpp"
        "i2c.cpp"
        "i2c.h"
        "devices/device_component.h"
        "devices/device_component.cpp"
        "devices/amplifier.h"
        "devices/amplifier.cpp"
        "devices/codec.cpp"
        "devices/codec_regs.h"
        "devices/satellites.cpp"
        "devices/sub.cpp"
        "devices/regs.h"
        PRIV_REQUIRES driver esp_driver_i2c)
